Fix errored seed words from shifting due to style overwrite

--- a/app/style/CreateWalletForm.less
+++ b/app/style/CreateWalletForm.less
@@ -51,7 +51,7 @@
   top: 122px;
 }
 
-.seedArea > .error {
+.seedArea > .seedError {
   color: red;
   position: fixed;
   top: 122px;
